<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:weightSum = "2">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure" />

    <NumberPicker
        android:id="@+id/quantity_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text">
    </NumberPicker>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/quantity_picker"
        android:weightSum = "2">
        <Button
            android:id="@+id/cancel_button"
            android:layout_columnWeight="1"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_columnWeight="1"
            android:layout_height="50dp"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </GridLayout>
</RelativeLayout>