<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PlanetMenuActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <TextView
        android:id="@+id/event_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="-2dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/event_msg"
        android:layout_marginTop="-2dp"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:rowCount="2"
        android:weightSum = "2">

        <Button
            android:id="@+id/market_button"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/market" />

        <Button
            android:id="@+id/status_button"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/status" />

        <Button
            android:id = "@+id/save_button"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/save"   />
        <Button
            android:id = "@+id/planet_info_button"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/shipYard"/>
    </GridLayout>
</RelativeLayout>