<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/credit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_title"
            android:textSize="30sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/credit_icon_pilot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_icon_pilot" />

        <TextView
            android:id="@+id/credit_icon_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_icon_plus" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>